<resources>
    <!-- Informações da aplicação -->
    <string name="app_name">VodPlayer</string>
    <string name="author">António César Vieira da Cruz Júnior</string>

    <!-- Textos e palavras usadas na aplicação -->
    <string name="settings">Configurações</string>
    <string name="buffered_position">Buffered Position:</string>
    <string name="current_position">Current Position:</string>
    <string name="duration">Duration:</string>
    <string name="play">Play</string>
    <string name="barra">/</string>
    <string name="traco">---</string>
    <string name="play_list">Lista de Reprodução</string>
    <string name="server_fail">Falha ao acessar servidor. Verifique a conexão ou tente acessar outro vídeo.</string>
    <string name="loading">Carregando...</string>
    <string name="title">Título</string>
    <string name="video_description">Descrição do vídeo</string>
    <string name="format_evaluator">Formato de Avaliação:</string>
    <string name="evaluator_adaptech">AdapTech Evaluator</string>
    <string name="evaluator_festive">FESTIVE Evaluator</string>
    <string name="evaluator_agile">AGILE evaluator</string>
    <string name="save">Salvar</string>
    <string name="evaluator_default">Default Evaluator</string>
    <string name="menu_home">Início</string>
    <string name="menu_channels">Canais</string>
    <string name="menu_search">Buscar</string>
    <string name="description_video_image">Imagem do Vídeo</string>
    <string name="details">Detalhes</string>
    <string name="watch">Assistir</string>

    <!-- Strings de teste (FIXAS) -->
    <string name="sintel_description">\"Sintel\" is an independently produced short film, initiated by the Blender Foundation as a means to further improve and validate the free/open source 3D creation suite Blender. With initial funding provided by 1000s of donations via the internet community, it has again proven to be a viable development model for both open 3D technology as for independent animation film. This 15 minute film has been realized in the studio of the Amsterdam Blender Institute, by an international team of artists and developers. In addition to that, several crucial technical and creative targets have been realized online, by developers and artists and teams all over the world. \n\nwww.sintel.org</string>
    <string name="duration_default">0:00s</string>
    <string name="date_default">02 de Agosto de 2015</string>
    <string name="title_activity_description">Descrição do Filme</string>

    <!-- Urls de serviços -->

    <!-- Urls de vídeos (FIXAS) -->
    <string name="url_video">http://androidbegin.com/tutorial/AndroidCommercial.3gp</string>
    <string name="url_dash_v">http://download.tsi.telecom-paristech.fr/gpac/DASH_CONFORMANCE/TelecomParisTech/mp4-main-ogop/mp4-main-ogop-mpd-V-BS.mpd</string>
    <string name="url_dash_av">http://download.tsi.telecom-paristech.fr/gpac/DASH_CONFORMANCE/TelecomParisTech/mp4-main-ogop/mp4-main-ogop-mpd-AV-BS.mpd</string>
    <string name="url_dash_teste2">http://download.tsi.telecom-paristech.fr/gpac/DASH_CONFORMANCE/TelecomParisTech/mp4-live-periods/mp4-live-periods-mpd.mpd</string>
    <string name="url_dash_teste3">http://download.tsi.telecom-paristech.fr/gpac/DASH_CONFORMANCE/TelecomParisTech/mp4-onDemand/mp4-onDemand-mpd-AV.mpd</string>
    <string name="url_dash_youtube">http://pbus.icomp.ufam.edu.br/vod/demoplayer-youtube.mdp</string>
    <string name="url_dash_2s_vodserver_dataset8">http://vod.icomp.ufam.edu.br/datasets/dataset8/1000-3600/FPS30/onDemand/2s/onDemand_2s.mpd</string>
    <string name="url_dash_2s_vodserver_dataset7">http://vod.icomp.ufam.edu.br/datasets/dataset7/250-3600/FPS30/onDemand/2s/onDemand_2s.mpd</string>

    <!-- Outros -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_video_list">Não foi possível obter a lista de vídeos. Verifique a conexão e clique AQUI para recarregar.</string>
    <string name="error_channel_list">Não foi possível obter a lista de canais. Verifique a conexão e clique AQUI para recarregar.</string>
    <string name="uploaded">Postado em: </string>
    <string name="search">Buscar</string>
    <string name="connection_error">Erro ao baixar lista de canais. verifique a conexão.</string>

</resources>
